# nucleo.nvim

./: .gitignore  .luarc.json  .neoconf.json  Cargo.toml  README.md  justfile  lazy.lua  neovim.toml  rustfmt.toml
.github/workflows/: release.yml
lua/: nucleo.lua
lua/nucleo/: actions.lua  async.lua  config.lua  debounce.lua  entry.lua  highlighter.lua  line.lua  log.lua  manager.lua  picker.lua  pickers.lua  presets.lua  previewer.lua  prompt.lua  renderer.lua  results.lua  text.lua
lua/nucleo/actions/: files.lua
lua/nucleo/extensions/: flash.lua  init.lua
lua/nucleo/previewer/: diff.lua  file.lua
lua/nucleo/sources/: diagnostics.lua  files.lua  git.lua  init.lua
lua/nucleo/vim/: init.lua  select.lua
plugin/: nucleo.lua
src/: buffer.rs  config.rs  entry.rs  error.rs  file_finder.rs  fuzzy.rs  injector.rs  lib.rs  lua.rs  matcher.rs  nvim.rs  pattern.rs  picker.rs  previewer.rs  sorted_vec.rs  sorter.rs  state.rs  util.rs  window.rs
src/next/: mod.rs  picker.rs
src/nucleo/: boxcar.rs  mod.rs  pattern.rs  worker.rs
src/nucleo/pattern/: tests.rs
src/sources/: custom.rs  diagnostics.rs  files.rs  git.rs  git_hunks.rs  lsp.rs  lua_function.rs  lua_tables.rs  lua_value.rs  mod.rs  source.rs
