[package]
name = "nucleo-nvim"
version = "0.1.0"
edition = "2021"

[lib]
name = "nucleo_nvim"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
buildstructor = "0.5"
nucleo = "0.2"
parking_lot = "0.12"
ignore = "0.4"
mlua = { version = "0.9", features = [
  "luajit",
  "module",
  "macros",
  "async",
  "serialize",
  "send",
  "parking_lot",
] }
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
log = "0.4.20"
simplelog = "0.12.1"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
range_rover = "0.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
ropey = "1.6"
