[package]
name = "nucleo-nvim"
version = "0.1.0"
edition = "2021"

[lib]
name = "nucleo_nvim"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
buildstructor = "0.5"
nucleo = "0.2"
parking_lot = "0.12"
ignore = "0.4"
mlua = { version = "0.9", features = [
  "luajit",
  "module",
  "macros",
  "async",
  "serialize",
  "send",
  "parking_lot",
] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
derive_more = "0.99"
directories = "5.0"
log = "0.4.20"
once_cell = "1.18"
partially = { version = "0.2", features = ["derive"] }
range_rover = "0.1"
rayon = "1.8"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3.4"
simplelog = "0.12.1"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1"
unicode-truncate = "0.2"
unicode-width = "0.1"
git2 = "0.18"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
