[package]
name = "nucleo-nvim"
version = "0.1.0"
edition = "2021"

[lib]
name = "nucleo_nvim"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
buildstructor = "0.5"
derive_deref = "1.1"
nucleo-matcher = "0.3"
parking_lot = { version = "0.12", features = ["send_guard", "arc_lock"] }
ignore = "0.4"
mlua = { version = "0.10.0-beta.1", features = [
  "luajit",
  "module",
  "macros",
  "serialize",
  "send",
] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
derive_more = { version = "1", features = ["full"] }
directories = "5.0"
log = "0.4.20"
once_cell = "1.18"
partially = { version = "0.2", features = ["derive"] }
range_rover = "0.1"
rayon = "1.8"
ropey = "1.6"
rvstruct = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_with = "3.4"
simplelog = "0.12.1"
strum = { version = "0.26", features = ["derive"] }
smol_str = { version = "0.2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
thiserror = "1"
oxi-types = "0.4"
oxi-luajit = "0.4"
oxi-api = { version = "0.4", features = ["neovim-nightly"] }
indexset = "0.4"
enum_dispatch = "0.3"

tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1"
unicode-truncate = "1"
unicode-width = "0.1"
git2 = "0.19"
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"

[build-dependencies]
bindgen = "0.69"
